--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,5 +8,6 @@
 </head>
 <body>
     안녕하세요 1번 편집 박진우입니다.
+    안녕하세요 2번 편집 심상헌입니다.
 </body>
 </html>
